[package]
name = "klog"
version = "0.1.0"
edition = "2024"

[dependencies]
inquire = "0.9.2"
k8s-openapi = { version = "0.27.0", features = ["v1_34"] }

kube = { version = "3.0.0", default-features = false, features = ["client", "runtime", "derive", "rustls-tls"] }

tokio = { version = "1", features = ["full"] }

reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
rustls = { version = "0.23.36", features = ["ring"] }
futures = "0.3.31"
colored = "3.1.1"
indicatif = "0.18.3"
clap = { version = "4.5.54", features = ["derive"] }
regex = "1.12.2"
comfy-table = "7.2.2"

[profile.release]
strip = true      
opt-level = "z"   # Optimize for binary size (optional, "3" is for speed)
lto = true        # Link Time Optimization (makes binary even smaller/faster)
codegen-units = 1 # Better optimization, but slower to compile
